docs/v3.8.0rc1/_sources/gallery/single/s1s2.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/s1s2.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_s1s2.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_s1s2.py:


S1 S2 Function Computation
==========================

This example demonstrates how to compute and visualize the S1 and S2 scattering functions using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-14

.. code-block:: Python

    from TypedUnit import ureg
    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian








.. GENERATED FROM PYTHON SOURCE LINES 15-16

Defining the source

.. GENERATED FROM PYTHON SOURCE LINES 16-23

.. code-block:: Python

    source = Gaussian(
        wavelength=450 * ureg.nanometer,  # 450 nm
        polarization=0 * ureg.degree,  # Linear polarization angle in radians
        optical_power=1 * ureg.watt,  # Arbitrary units
        NA=0.3 * ureg.AU,  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Defining the scatterer

.. GENERATED FROM PYTHON SOURCE LINES 25-32

.. code-block:: Python

    scatterer = Sphere(
        diameter=6 * ureg.nanometer,  # 6 nm
        source=source,
        medium_property=1.0 * ureg.RIU,  # Refractive property of the surrounding medium
        property=1.4 * ureg.RIU,  # Refractive property of the scatterer
    )








.. GENERATED FROM PYTHON SOURCE LINES 33-34

Computing the data

.. GENERATED FROM PYTHON SOURCE LINES 34-36

.. code-block:: Python

    data = scatterer.get_s1s2(sampling=200)  # Specify the number of sampling points








.. GENERATED FROM PYTHON SOURCE LINES 37-38

Plotting the data

.. GENERATED FROM PYTHON SOURCE LINES 38-39

.. code-block:: Python

    figure = data.plot()



.. image-sg:: /gallery/single/images/sphx_glr_s1s2_001.png
   :alt: S$_1$ parameter, S$_2$ parameter
   :srcset: /gallery/single/images/sphx_glr_s1s2_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.236 seconds)


.. _sphx_glr_download_gallery_single_s1s2.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: s1s2.ipynb <s1s2.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: s1s2.py <s1s2.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: s1s2.zip <s1s2.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
